--- a/package.json
+++ b/package.json
@@ -12,14 +12,17 @@
   },
   "dependencies": {
     "@apps-in-toss/web-framework": "^1.5.0",
-    "react": "^19.2.0",
-    "react-dom": "^19.2.0"
+    "@emotion/react": "^11.14.0",
+    "@toss/tds-mobile": "^2.1.2",
+    "@toss/tds-mobile-ait": "^2.1.2",
+    "react": "^18.3.1",
+    "react-dom": "^18.3.1"
   },
   "devDependencies": {
     "@eslint/js": "^9.39.1",
     "@types/node": "^24.10.1",
-    "@types/react": "^19.2.5",
-    "@types/react-dom": "^19.2.3",
+    "@types/react": "^18.3.27",
+    "@types/react-dom": "^18.3.7",
     "@vitejs/plugin-react": "^5.1.1",
     "eslint": "^9.39.1",
     "eslint-plugin-react-hooks": "^7.0.1",
