--- a/.env.example
+++ b/.env.example
@@ -6,3 +6,5 @@ DEV_SERVER_PORT=5173
 VITE_DCA_HISTORY_LIMIT=10
 VITE_APP_CURRENCY_SYMBOL=원
 VITE_APP_CURRENCY=KRW
+# 브릿지/히어로 로고 절대 URL (예: https://cdn.example.com/logo.png). 비우면 번들 자산 사용.
+VITE_BRAND_LOGO_URL=
